@@ -1,5 +1,11 @@
 List of user-visible changes of Ratfor Testsuite.
 
+New in XXX
+-----------
+ * Now the testsuite should work also with mksh (the MirBSD Korn Shell) on
+   Linux systems (previously a bug in the interaction between the GNU C
+   Library and mksh prevented this).
+
 New in 0.9d
 -----------
  * Now the user can define, at configure time, a list of test cases
